fix: stretch project-inner to fill card height so buttons align

--- a/css/style.css
+++ b/css/style.css
@@ -391,6 +391,7 @@ ul { list-style: none; }
     display: flex;
     flex-direction: column;
     min-height: 380px;
+    flex: 1;
     box-sizing: border-box;
 }
 
